# protobuf_usage

./: CMakeLists.txt  README.md
include/: MyTest.h
proto/: Address.proto  Person.proto
src/: MyTest.cc  main.cc
